<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.grpc.longlivedstreams</groupId>
    <artifactId>longlivedstreams</artifactId>
    <packaging>pom</packaging>
    <version>1.1-SNAPSHOT</version>

    <modules>
        <module>examples</module>
        <module>server</module>
        <module>client</module>
    </modules>
         
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <grpc.version>1.32.2</grpc.version>
        <protobuf.verion>3.9.1</protobuf.verion>
        <opencensus.version>0.27.1</opencensus.version>
        <guava.version>30.0-jre</guava.version>
        <javax.version>1.3.2</javax.version>
        <slf4j.version>1.7.32</slf4j.version>
        <generated-sources.directory>${project.build.directory}/generated-sources</generated-sources.directory>
        <!-- Tests properties -->
        <junit.version>5.5.2</junit.version>
        <jupiter.version>5.2.0</jupiter.version>
        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
        <mockito.version>3.3.3</mockito.version>
        <google.truth.version>1.0.1</google.truth.version>
        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>   
        <maven-failsafe-plugin.version>3.0.0-M6</maven-failsafe-plugin.version>
    </properties>
         
    <scm>
      <connection>scm:git:https://github.com/Falland/grpc-long-lived-streams.git</connection>
      <developerConnection>scm:git:https://github.com/Falland/grpc-long-lived-streams.git</developerConnection>
      <url>https://github.com/Falland/grpc-long-lived-streams.git</url>
      <tag>HEAD</tag>
    </scm>     
         
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.grpc.longlivedstreams</groupId>
                <artifactId>server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc.longlivedstreams</groupId>
                <artifactId>client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc.longlivedstreams</groupId>
                <artifactId>grpc-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc.longlivedstreams</groupId>
                <artifactId>grpc-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc.longlivedstreams</groupId>
                <artifactId>examples</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc.longlivedstreams</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-netty-shaded</artifactId>
                <version>${grpc.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-protobuf</artifactId>
                <version>${grpc.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-stub</artifactId>
                <version>${grpc.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!--  OpenCensus - A stats collection and distributed tracing framework used by Netty  -->
            <dependency>
                <groupId>io.opencensus</groupId>
                <artifactId>opencensus-api</artifactId>
                <version>${opencensus.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.grpc</groupId>
                        <artifactId>grpc-context</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.opencensus</groupId>
                <artifactId>opencensus-impl</artifactId>
                <version>${opencensus.version}</version>
                <scope>runtime</scope>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.grpc</groupId>
                        <artifactId>grpc-context</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>javax.annotation-api</artifactId>
                <version>${javax.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <!-- Tests -->
            <dependency>
                <groupId>com.google.truth</groupId>
                <artifactId>truth</artifactId>
                <version>${google.truth.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.errorprone</groupId>
                        <artifactId>error_prone_annotations</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
         
    <build>
      <plugins>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <argLine>${argLine} --add-opens
              java.base/java.lang.reflect=ALL-UNNAMED --add-exports
              java.base/sun.nio.ch=ALL-UNNAMED</argLine>
            <reuseForks>false</reuseForks>
            <forkCount>1</forkCount>
           </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${maven-failsafe-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <configuration>
            <tagNameFormat>v@{project.version}</tagNameFormat>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco-maven-plugin.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>report</id>
              <phase>prepare-package</phase>
              <goals>
                <goal>report</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

      </plugins>
      <pluginManagement>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.2.0</version>
          </plugin>
        </plugins>
      </pluginManagement>
    </build>

</project>
